# advanced_python_private

./: Member.py  MemberWithProperties.py  PersonInvestigation.py  README.md  Team.py  api_async_investigation.py  api_asynch_investigation.py  api_investigation.py  daomod_investigation.py  database_cli.py  databse_intro.py  decorator_investigation.py  email_obfuscator.py  emails.txt  functional_programming_intro.py  generator_investigation.py  git_push.py  hineritance_investigation.py  member_dao.py  member_database.db  member_database_trainer.db  members.db  mod_investigation.py  person.py  pyqt6_async_investigation.py  pyqt_investigation.py  sorting_investigation.py  stdin_investigation.py  timing_decorator.py  tk_investigation.py  type_hints.py  users.json  users_obfuscated.json
__pycache__/: git_test_commit.py
flask_intro/: app.py  web_dao.py
flask_intro/templates/: _nav.html  index.html  members.html
member_manager/: pyproject.toml
member_manager/src/member_manager/: __init__.py  member.py  member_dao.py
member_manager/src/member_manager.egg-info/: PKG-INFO  SOURCES.txt
member_manager/src/pt_text_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pt_modules/: pyproject.toml
pt_modules/src/pt_text_utils/: __init__.py  utils.py
pt_modules/src/pt_text_utils.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: mathmod.py  test_mathmod.py  test_member_dao.py
